# kondo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  notes.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploys.yaml  lint.yaml  tests.yaml
ci/: build.bash
kondo/: Cargo.toml
kondo-lib/: Cargo.toml
kondo-lib/src/: lib.rs  lib_test.rs  project.rs  search.rs  test.rs
kondo-lib/src/project/: cmake.rs  godot.rs  node.rs  rust.rs  template.rs  terraform.rs  unity.rs  unreal.rs  utils.rs
kondo-tui/: Cargo.toml
kondo-tui/src/: main.rs  tui.rs
kondo-ui/: Cargo.toml
kondo-ui/src/: game.rs  main.rs  xilem.rs
kondo/src/: component.rs  discovery.rs  lib.rs  main.rs  main_test.rs  tui.rs  widgets.rs
kondo/src/widgets/: project_list.rs  selected.rs
kondo/tests/: common.rs  test.rs
path-trie/: Cargo.toml
path-trie/src/: lib.rs
src/: main.rs
test_data/scenario_a/python-project-a/__pycache__/: 2  3
test_data/scenario_a/python-project-b/__pycache__/: cache.data
test_data/scenario_b/cargo-project-a/: Cargo.toml
test_data/scenario_nested_a/python-project-a/sub-project/python-project-b/: main.py
