[workspace]
members = ["kondo", "kondo-lib", "path-trie"]
resolver = "2"
default-members = ["kondo"]

[workspace.dependencies]
path-trie = { path = "./path-trie" }
kondo-lib = { path = "./kondo-lib" }
# [profile.release]
# lto = "thin"
# codegen-units = 1

[profile.distribution]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = 'abort'
# debug = 0
# debug = true
