[package]
name = "kondo-lib"
version = "0.9.0"
edition = "2021"

[dependencies]
cargo-util-schemas = "0.4.0"
cmake-parser = "0.1.0-alpha.1"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
enum_dispatch = "0.3"
path-trie = { workspace = true }
rust-ini = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", no-default-features = true, features = ["parse"] }
unity = "0.2"
walkdir = "2.5.0"
