[package]
name = "kondo-lib"
version = "0.8.0"
authors = ["Trent Billington <trent.h.billington@gmail.com>"]
edition = "2021"
description = "Shared code lib for kondo and kondo-ui."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.25"
walkdir = "2"
