[package]
name = "kondo-ui"
version = "0.8.0"
authors = ["Trent Billington <trent.h.billington@gmail.com>"]
description = """
kondo-ui is a filesystem cleaning tool that recursively searches directories
for known project structures and allows you to clean them of unnecessary files
like build artifacts.
"""
documentation = "https://github.com/tbillington/kondo"
homepage = "https://github.com/tbillington/kondo"
repository = "https://github.com/tbillington/kondo"
edition = "2021"
license = "MIT"
keywords = ["clean", "cleanup", "delete", "free"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7"

[dependencies.kondo-lib]
path = "../kondo-lib"
version = "0.8"

[profile.release]
incremental = false
lto = true
codegen-units = 1
