[package]
name = "kondo-ui"
version = "0.8.0"
authors = ["Trent Billington <trent.h.billington@gmail.com>"]
description = """
kondo-ui is a filesystem cleaning tool that recursively searches directories
for known project structures and allows you to clean them of unnecessary files
like build artifacts.
"""
documentation = "https://github.com/tbillington/kondo"
homepage = "https://github.com/tbillington/kondo"
repository = "https://github.com/tbillington/kondo"
edition = "2024"
license = "MIT"
keywords = ["clean", "cleanup", "delete", "free"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  # "ui",
  # "audio",
  "default_app",
  "default_platform",
  "picking",
  # "scene",
  "ui_api",
  "ui_bevy_render",
  "experimental_bevy_feathers",
  "experimental_bevy_ui_widgets",
] }
rfd = "0.17.2"

[dependencies.kondo-lib]
path = "../kondo-lib"
version = "0.9"
